# rexlib-metadata

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: build-and-test.yml
python/rexlib_metadata/: __init__.py  _rexlib.pyi  abc.py  registry.py  result.py
python/rexlib_metadata/conventions/: star.py
src/: lib.rs  star.rs
tests/python/: test_smoke.py  test_star_reader.py
tests/python/fixtures/: mini.star
