[package]
name = "rexlib-metadata"
version = "0.1.0"
edition = "2021"

[lib]
name = "rexlib_metadata"
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.29", features = ["extension-module"] }
arrow      = { version = "59" }
pyo3-arrow = "0.19"

[profile.release]
lto            = true
codegen-units  = 1
